# LOTG-Stats

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.cache/: nflverse_injuries_2020.csv  nflverse_weekly_rosters_2026.csv
LOTG_Cloud_Tracker/: requirements.txt
config/: digest.yaml  digest_credentials.enc  league.yaml
data/: LOTG_Stats.xlsx  commissioner_pick_trades.csv  injuries.csv  injury_tracker.csv  league_week.csv  manual_transactions.csv  pick_history.csv  player_week.csv  suspensions.csv  team_all_time.csv  team_year.csv  trades.csv  transactions.csv
exports/: formulas.csv  league_all_time.csv  league_week.csv  league_year.csv  picks.csv  player_all_time.csv  player_year.csv  team_all_time.csv  team_week.csv  team_year.csv  trades.csv  transactions.csv
plan/: AUDIT_PHASE12.md  AUDIT_PHASE12_FINDINGS.md  AUDIT_PHASE12_FINDINGS_RUN2.md  AUDIT_PHASE12_FINDINGS_RUN3.md  AUDIT_PHASE13_10PART.md  AUDIT_PHASE13_10PART_ROUND1_PART10.md  AUDIT_PHASE13_10PART_ROUND1_PARTS123.md  AUDIT_PHASE13_10PART_ROUND1_PARTS456.md  AUDIT_PHASE13_10PART_ROUND1_PARTS789.md  AUDIT_PHASE13_10PART_ROUND2.md  AUDIT_PHASE13_10PART_ROUND3.md  AUDIT_PHASE13_3PART.md  AUDIT_PHASE13_3PART_ROUND2.md  AUDIT_PHASE13_3PART_ROUND3.md  AUDIT_PHASE13_COMPLETENESS_AND_CELLSWEEP.md  AUDIT_PHASE13_COMPLETENESS_AND_CELLSWEEP_RESULTS.md  AUDIT_PHASE13_ROUND10_PARTSAB.md  AUDIT_PHASE13_ROUND10_PARTSCD.md  AUDIT_PHASE13_ROUND10_PARTSEF.md  AUDIT_PHASE13_ROUND10_PARTSGH.md  AUDIT_PHASE13_ROUND10_PARTSIJ.md  AUDIT_PHASE13_ROUND11_PARTSAB.md  AUDIT_PHASE13_ROUND11_PARTSCD.md  (+57 more)
(+909 files in other folders)
