[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "lotg-stats"
version = "1.0.0"
description = "LOTG Stats pipeline: complete workbook, head-to-head, frozen columns"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "pyyaml>=6.0",
  "openpyxl>=3.1.2",
  "xlsxwriter>=3.2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
