[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lotg"
version = "2.0.0"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "lotg",
    "player_week",
    "player_year",
    "player_all_time",
    "team_week",
    "team_year",
    "team_all_time",
    "league_week",
    "league_year",
    "league_all_time",
    "transactions",
    "trades",
    "pick_history",
]
